[gd_scene load_steps=9 format=3 uid="uid://dctcd7bedhwws"]

[ext_resource type="Script" uid="uid://b3s78h67myos6" path="res://scripts/apple_tree.gd" id="1_66v30"]
[ext_resource type="Texture2D" uid="uid://b31ifofe4geip" path="res://assets/punyworld-overworld-tileset.png" id="1_rf3rb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_66v30"]
atlas = ExtResource("1_rf3rb")
region = Rect2(32, 432, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_veaef"]
atlas = ExtResource("1_rf3rb")
region = Rect2(48, 432, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_veaef"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_66v30")
}],
"loop": true,
"name": &"tree_apple",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_veaef")
}],
"loop": true,
"name": &"tree_no_apple",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_y0035"]

[sub_resource type="CircleShape2D" id="CircleShape2D_66v30"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_veaef"]
radius = 3.0

[node name="apple_tree" type="StaticBody2D"]
scale = Vector2(2, 2)
script = ExtResource("1_66v30")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_veaef")
animation = &"tree_apple"

[node name="pickable_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickable_area"]
shape = SubResource("CircleShape2D_y0035")

[node name="growth_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="spawn_apple_area" type="Marker2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="spawn_apple_area"]
shape = SubResource("CircleShape2D_66v30")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_veaef")

[connection signal="body_exited" from="pickable_area" to="." method="_on_pickable_area_body_exited"]
[connection signal="body_shape_entered" from="pickable_area" to="." method="_on_pickable_area_body_shape_entered"]
[connection signal="timeout" from="growth_timer" to="." method="_on_growth_timer_timeout"]
